GetFlows implementation changes related to discussion